@@ -172,15 +172,6 @@
 					<key>Type</key>
 					<string>NSString</string>
 				</dict>
-				<key>type</key>
-				<dict>
-					<key>AppleEventCode</key>
-					<string>flTY</string>
-					<key>ReadOnly</key>
-					<string>YES</string>
-					<key>Type</key>
-					<string>NSNumber&lt;Int&gt;</string>
-				</dict>
 				<key>isRSSFolder</key>
 				<dict>
 					<key>AppleEventCode</key>
